Get kafka working again after spring boot update. Torrenting working on stream service. New framework for series and movie structures to be serialized to SQL. Updates to SQL logic to allow for one-many relationships. Bit of a mess right now. i might want to go with a more traditional route of handling my records.